# deepseek-ocr

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/services/: ocr_service.py
app/templates/: index.html
